# flutter_syncthing

./: .metadata  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/jniLibs/armeabi-v7a/: libsyncthing_bridge.h
android/src/main/jniLibs/x86/: libsyncthing_bridge.h
android/src/main/jniLibs/x86_64/: libsyncthing_bridge.h
android/src/main/kotlin/com/example/flutter_syncthing/: FlutterSyncthingPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_syncthing_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/add_device/: AddDeviceView.dart
example/lib/home/: HomeView.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_syncthing.podspec
ios/Classes/: FlutterSyncthingPlugin.h  FlutterSyncthingPlugin.m  SwiftFlutterSyncthingPlugin.swift
lib/: flutter_syncthing.dart  flutter_syncthing_method_channel.dart  flutter_syncthing_platform_interface.dart
lib/bridge/: binding.dart
lib/model/: bridge_model_generated.dart
scripts/: upgrade_bridge_flatbuffers.sh  upgrade_bridge_libs.sh
test/: flutter_syncthing_method_channel_test.dart  flutter_syncthing_test.dart
windows/: CMakeLists.txt  flutter_syncthing_plugin.cpp  flutter_syncthing_plugin.h  flutter_syncthing_plugin_c_api.cpp
windows/include/flutter_syncthing/: flutter_syncthing_plugin_c_api.h
windows/shared/: libsyncthing_bridge.h
